--- a/deeppack_dynamic.ipynb
+++ b/deeppack_dynamic.ipynb
@@ -683,7 +683,7 @@
    },
    "outputs": [],
    "source": [
-    "#load model\n",
+    "#load model for test\n",
     "import numpy as np\n",
     "import torch\n",
     "from collections import deque\n",
@@ -696,6 +696,9 @@
     "l2 = 64\n",
     "l4 = 26\n",
     "\n",
+    "\n",
+    "linear_input = ((((((bin_w*20-8)//2)-2)//2)-2)//2 -2 )*( (((((bin_h*20*2-8)//2)-2)//2)-2)//2 -2 )\n",
+    "action_space = bin_w * bin_h +1\n",
     "\n",
     "model = torch.nn.Sequential(\n",
     "    torch.nn.Conv2d(1, 16, kernel_size=5, stride=1),\n",
@@ -718,9 +721,9 @@
     "\n",
     "    torch.nn.Flatten(),\n",
     "    #torch.nn.ReLU(),\n",
-    "    torch.nn.Linear(160,64),\n",
+    "    torch.nn.Linear(linear_input,64),\n",
     "    #torch.nn.ReLU(),\n",
-    "    torch.nn.Linear(64,l4)\n",
+    "    torch.nn.Linear(64,action_space)\n",
     ")\n",
     "model = model.to(device)\n",
     "model.load_state_dict(torch.load(\"deeppack_dynamic_model_0117.pt\"))\n",
@@ -1165,7 +1168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.15 (main, Nov 24 2022, 14:39:17) [MSC v.1916 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
